Changes to file

--- a/backend/Pages/donate.html
+++ b/backend/Pages/donate.html
@@ -51,7 +51,7 @@
 /*style items (options):*/
 .select-items {
   position: absolute;
-  background-color: DodgerBlue;
+  background-color: #B30738;
   top: 100%;
   left: 0;
   right: 0;
@@ -157,7 +157,7 @@ span.email {
     </div>
 
     <div class="container" >
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <button type="button" onclick="window.location.href='Welcome_Page/Welcome.html';">Cancel</button>
     </div>
   </form>
 </div>
